--- a/index.html
+++ b/index.html
@@ -1,12 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ziyin Song</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ziyin Song | CV</title>
+  <style>
+    body {
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 2rem;
+      line-height: 1.6;
+      background-color: #f8f9fa;
+      color: #212529;
+    }
+    h1, h2, h3 {
+      color: #2c3e50;
+    }
+    a {
+      color: #007acc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .section {
+      margin-bottom: 2.5rem;
+    }
+  </style>
 </head>
 <body>
   <h1>Ziyin Song</h1>
   <p>Email: <a href="mailto:songziyin@iphy.ac.cn">songziyin@iphy.ac.cn</a></p>
+  <p>Institute: Ph.D. student at Institute of Physics, Chinese Academy of Sciences</p>
+
+  <div class="section">
+    <h2>Education</h2>
+    <ul>
+      <li>Ph.D. in Physics, Institute of Physics, Chinese Academy of Sciences (Present)</li>
+      <li>B.Sc. in Physics, [Your Undergraduate Institution], [Year]</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Research Interests & Selected Publications</h2>
+    <p>My research focuses on condensed matter theory and computational physics, particularly in magnetic symmetry and strongly correlated electron systems.</p>
+    <ul>
+      <li>
+        <strong>Enumeration of Spin-Space Groups:</strong> <br>
+        Y. Jiang, Z. Song, et al., <em>Phys. Rev. X</em> <strong>14</strong>, 031039 (2024)
+      </li>
+      <li>
+        <strong>d-wave Altermagnetism:</strong><br>
+        B. Jiang, Z. Song, et al., <em>Nature Physics</em> (2024)
+      </li>
+      <li>
+        <strong>Representations of Spin-Space Groups:</strong><br>
+        Z. Song, et al., <em>Phys. Rev. B</em> <strong>111</strong>, 134407 (2025)
+      </li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Awards</h2>
+    <ul>
+      <li>2024 Chinese Academy of Sciences Presidential Scholarship</li>
+      <li>2024 National Ph.D. Scholarship of China</li>
+    </ul>
+  </div>
+
 </body>
 </html>
